# Life-expentancy-dashboard

./: Main_Page.py  README.md  home.py  main.py  main_app.py  pyproject.toml  utils.py
.streamlit/: config.toml
data/: fillters.py
main_tabs/: dataset_overview.py  preprocessing.py
pages/: Dashboard.py  🟢Saudi_Arabia🟢.py
tabs/: Linear_Model.py  general_insights.py  numrecial_analysis.py  overall_insights.py  project_info.py  region_based_analytics.py  saudi_arabia.py
